--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
+  width: 100vw;
+  height: 100vh;
+  background-color: #f0f0f0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.calculator{
+  width: 400px;
+  height: 500px;
+  background-color: wheat;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 5px 5px 50px -20px black;
+}
+.screen{
+  width: 100%;
+  height: 30%;
+  background-color: #0b1a33;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.result{
+  height: 90px;
+  text-align: right;
+  padding: 15px;
+  font-size: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.equation{
+  height: 30px;
+  padding: 0 15px;
+  font-size: 20px;
+  text-align: right;
+}
+.keypad{
+  height: 100%;
+  width: 100%;
+}
+.button{
+  width: 25%;
+  height: 70px !important;
+  border:none;
+  font-size: 18px; 
+}
+.large_button{
+  width: 50%;
+  height:70px;
+  border: none;
+  background-color: #0b1a33;
+  color: white;
+  font-size: 18px;
+}
+.func{
+  background-color: #c9c9c9;
+}
+.operator{
+  background-color:#91a7cc;
 }
